--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+@font-face {
+  font-family: "NeueMachina";
+  src: local("NeueMachina"), url(".//fonts/NeueMachina-Bold.ttf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "NeueMachina";
+  src: local("NeueMachina"), url(".//fonts/NeueMachina-Light.ttf");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "NeueMachina";
+  src: local("NeueMachina"), url(".//fonts/NeueMachina-Regular.ttf");
+  font-weight: 400;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  color: #ffff;
+  font-family: "NeueMachina";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
