--- a/src/Header/Circle/Circle.module.css
+++ b/src/Header/Circle/Circle.module.css
@@ -10,15 +10,15 @@
 }
 .circle b {
   position: absolute;
-  left: 50%; /* все буквы собрать в одну точку по середине */
-  width: 0; /* убрать отступ */
+  left: 50%;
+  width: 0;
   color: white;
 }
-/* верхние 17 букв «Шпаргалка блоггера» */
+
 .circle b:nth-of-type(-n + 17) {
   bottom: 50%;
   transform-origin: 0% 100%;
-  padding-bottom: 50%; /* от значения свойства зависит приближение текста к центру круга */
+  padding-bottom: 50%;
 }
 .circle b:nth-of-type(1) {
   transform: rotate(-92.08deg);
