--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+a {
+  text-decoration: none;
+  color: #ffff;
+  padding: 5px 0px;
+}
