--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,127 +1,73 @@
 .header {
-  padding: 20px 0px 40px 0px;
+  padding: 150px 0 40px;
   background: #1e1e1e;
-  /* height: 720px; */
   position: relative;
-  z-index: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  min-height: 600px;
+
   overflow: hidden;
 }
-
+.header__slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 .header::after {
   content: url("../Header/poldyaev.png");
   position: absolute;
   display: block;
+  line-height: 0;
   right: 0px;
-  top: 0px;
-  z-index: 1;
+  bottom: 0px;
 }
-
-.navigation {
-  position: absolute;
-  top: 150px;
-  left: 150px;
+.header__content {
+  position: relative;
+  height: 100%;
   display: flex;
-  column-gap: 40px;
-  list-style-type: none;
-  color: #ffffff;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   z-index: 1;
 }
-@keyframes bounce {
-  0%,
-  20%,
-  100% {
-    transform: translateY(0);
-    transform: translateY(0);
-  }
-  70% {
-    transform: translateY(-15px);
-    transform: translateY(-15px);
-  }
+.navigation {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  column-gap: 40px;
 }
-
 .link {
   font-size: 16px;
-  line-height: 15px;
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
-  padding: 10px 0px;
-}
-
-.button:hover {
-  animation: bounce 1s;
 }
 .line {
   width: 100px;
-  margin: 19px 0px 0px 0px;
-  size: 1px;
+  height: 1px;
+  background: #fff;
 }
-
-.bigNameWrapper {
-  white-space: nowrap;
-  overflow: hidden;
-  position: absolute;
-}
-
-.bigName {
+.about {
   position: relative;
+}
+.about__circle {
+  position: absolute;
+  right: -120px;
+  top: -90px;
+}
+.myNameIs {
   margin: 0;
-  font-weight: 400;
-  font-size: 300px;
-  line-height: 160%;
-  top: -130px;
+  margin-bottom: 20px;
 }
-
-.aboutMe__wrapper {
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  margin-left: 150px;
-}
-
-.aboutMe_title {
+.description {
   margin: 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 130%;
-}
-.aboutMeLast {
   margin-bottom: 80px;
+  width: auto;
 }
-
-.button_wrapper {
-  position: absolute;
-  content: " ";
-  top: 330px;
-  left: 640px;
+.lookBelow {
+  display: flex;
+  align-items: center;
 }
-.button_wrapper::before {
-  position: absolute;
-  content: url("../Header/Circle/Shape.svg");
-  top: 55px;
-  left: 45px;
-}
-
-.linkWrapper {
-  margin-left: 30px;
-  position: relative;
-}
-
-.linkWrapper:hover {
-  animation: bounce 1.5s;
-}
-
-.linkWrapper::before {
-  position: absolute;
-  content: url("../Header/shape.svg");
-  left: -30px;
-}
-
-.linkDown {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 15px;
-  text-decoration: none;
-  color: #ffffff;
-  padding: 10px 0;
+.lookBelow__title {
+  margin-left: 12px;
 }
